--- a/prototype/CSS/Styles.css
+++ b/prototype/CSS/Styles.css
@@ -11,3 +11,19 @@
     padding-left: 10px;
     margin-right: 10px;
 }
+
+#map {
+    margin-left: 50px;
+    height: 60vh;
+    width: 95%;
+}
+.map-title {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    background-color: rgba(255, 255, 255, 0.8); 
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 20px;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
+}
