Added Bus Tracker img logo and changes to Front end
Image is CC edited in photoshop

--- a/prototype/css/Styles.css
+++ b/prototype/css/Styles.css
@@ -15,6 +15,15 @@ main{
 #TopNav a{
     padding-left: 10px;
     margin-right: 10px;
+    text-decoration: none;
+    text-emphasis: none;
+    display: inline-block;
+    color: black;
+    font-size: 3em;
+
+}
+#TopNav img{
+    padding: 10px;
 }
 
 
@@ -30,9 +39,9 @@ main{
 }
 
 #map {
-    margin-left: 50px;
     height: 60vh;
-    width: 70%;
+    max-width: 70%;
+    min-width: 67%;
     float: right;
     background-color: lightgray;
     border-radius: 15px;
@@ -40,7 +49,8 @@ main{
 
 #busData {
     height: 60vh;
-    width: 25%;
+    max-width: 25%;
+    min-width: 20%;
     float: left;
     padding-left: 20px;
     background-color: lightgray;
