--- a/prototype/css/Styles.css
+++ b/prototype/css/Styles.css
@@ -1,12 +1,15 @@
 main{
     padding-top: 30px;
 }
-
+body{
+    margin: 0;
+}
 
 #TopNav{
-    background-color: aquamarine;
+    background-color: white;
     width: 100%;
-    height: 100px
+    height: 100px;
+    box-shadow: 1px 2px 5px 2px rgb(0 0 0 / 0.8);    
 }
 #TopNav nav{
     float: right;
