--- a/prototype/css/Styles.css
+++ b/prototype/css/Styles.css
@@ -60,3 +60,18 @@ body{
     border-radius: 15px;
 }
 
+#BackgroundMap{
+    z-index: -2;
+    width: 100%;
+    height: 800px;
+}
+#LoginSection{
+    width: 60%;
+    height: 500px;
+    background-color: gray;
+    margin: auto;
+}
+
+#LoginSection h1{
+    padding-left: 40%;
+}
