--- a/prototype/css/Styles.css
+++ b/prototype/css/Styles.css
@@ -226,15 +226,21 @@ nav #title {
 }
 
 .map-button button {
+    width: 30px; 
+    height: 30px; 
     background-color: #ffffff;
     color: rgb(0, 0, 0);
     border: none;
     border-radius: 3px;
     padding: 8px 16px;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 14px; 
+    display: flex;                  
+    align-items: center;            
+    justify-content: center;
 }
 
 .map-button button:hover {
     background-color: #F4F4F4;
 }
+
