--- a/prototype/css/styles.css
+++ b/prototype/css/styles.css
@@ -135,7 +135,7 @@ nav {
     width: 100%;
     height: 100px;
     box-shadow: 1px 1px 2px 1px rgba(94, 93, 93, 0.8);
-    padding: 0 20px;
+    padding: 0 10px;
 }
 
 nav ul {
@@ -143,7 +143,7 @@ nav ul {
     margin: 0;
     display: flex; 
     gap: 20px;
-    padding-right: 40px;
+    padding-right: 10px;
 }
 
 nav a {
@@ -204,6 +204,7 @@ nav #title {
 }
 
 #busData {
+    padding: 10px;
     height: 750px;
     max-width: 25%;
     min-width: 22.5%;
