--- a/prototype/css/styles.css
+++ b/prototype/css/styles.css
@@ -257,3 +257,24 @@ nav #title {
     background-color: #F4F4F4;
 }
 
+.user-location-marker {
+    width: 18px;
+    height: 18px;
+    background-color: #4285f4; 
+    border: 2px solid white;  
+    border-radius: 50%;        
+    box-shadow: 0 0 18px rgba(66, 133, 244, 0.6); 
+    position: relative;
+}
+
+.user-location-marker::after {
+    content: "";
+    width: 6px;
+    height: 6px; 
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
