--- a/prototype/css/styles.css
+++ b/prototype/css/styles.css
@@ -138,6 +138,25 @@ nav {
     padding: 0 10px;
 }
 
+.navbar {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600; 
+    font-size: 17.5px;
+    position: sticky; 
+    top: 0;
+    width: 100%;
+    z-index: 1000; 
+}
+
+.navbar-collapse {
+    background-color: white;
+    z-index: 1050;  
+}
+
+.navbar-nav {
+    padding: 1rem; 
+}
+
 nav ul {
     list-style-type: none;
     margin: 0;
@@ -195,12 +214,14 @@ nav #title {
 }
 
 #map {
+    position: relative; 
     height: 750px;
     max-width: 75%;
     min-width: 75%;
     float: right;
     background-color: lightgray;
     border-radius: 15px;
+    z-index: 1;
 }
 
 #busData {
@@ -239,6 +260,7 @@ nav #title {
 }
 
 .map-button button {
+    position: relative;
     width: 30px; 
     height: 30px; 
     background-color: #ffffff;
@@ -260,6 +282,7 @@ nav #title {
 #resetButton #homeButton #locationButton {
     padding: 8px 16px; 
     font-size: 14px;
+    z-index: 5;
 }
 
 .user-location-marker {
@@ -281,5 +304,26 @@ nav #title {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+
+/* Responsive layout for phonez */
+@media (max-width: 992px) {
+    #busData, #map {
+        width: 100%;         
+        float: none;
+        max-width: 100%;    
+        margin: 0 auto;     
+    }
+
+    #busData {
+        margin-top: 20px;
+        height: 20vh;
+        margin-bottom: 20px;
+    }
+
+    #map {
+        height: 70vh;
+    }
 }
 
