--- a/prototype/css/styles.css
+++ b/prototype/css/styles.css
@@ -316,12 +316,13 @@ nav #title {
 /* Footer */
 
 footer {
-    background-color: #1f212c;
-    color: white;
+    background-color: white;
+    color: rblack;
     text-align: center;
     padding: 10px 0;
     height: 50px;
     margin-top: auto;
+    box-shadow: 4px 1px 4px 1px rgba(37, 36, 36, 0.8);
 }
 
 footer p {
