--- a/prototype/css/styles.css
+++ b/prototype/css/styles.css
@@ -356,6 +356,9 @@ footer p {
 
 /* Responsive layout for phonez */
 @media (max-width: 992px) {
+    main {
+        padding: 0;
+    }
     #busData, #map {
         width: 100%;         
         float: none;
@@ -364,13 +367,15 @@ footer p {
     }
 
     #busData {
-        margin-top: 20px;
-        height: 20vh;
-        margin-bottom: 20px;
+        margin-top: 0;
+        height: 30vh;
+        margin-bottom: 0;
+        border-radius: 0;
     }
 
     #map {
-        height: 60vh;
+        height: 70vh;
+        border-radius: 0;
     }
 }
 
