made the nav bar smaller on mobile

--- a/prototype/css/styles.css
+++ b/prototype/css/styles.css
@@ -377,5 +377,15 @@ footer p {
         height: 70vh;
         border-radius: 0;
     }
+
+    header nav{
+        height: 80px;
+    }
+
+    nav img {
+        width: 50px;
+        height: 50px;
+    }
+
 }
 
