--- a/prototype/css/styles.css
+++ b/prototype/css/styles.css
@@ -119,7 +119,7 @@
 
 main{
     padding: 30px;
-    min-height: 100%; 
+    min-height: 90vh; 
     display: flex;
     flex-direction: column;
     position: relative;
@@ -243,7 +243,7 @@ nav #title {
 
 #map {
     position: relative; 
-    height: 95vh;
+    height: 85vh;
     max-width: 75%;
     min-width: 75%;
     float: right;
@@ -254,7 +254,7 @@ nav #title {
 
 #busData {
     padding: 10px 20px;
-    height: 95vh;
+    height: 85vh;
     max-width: 25%;
     min-width: 22.5%;
     float: left;
