--- a/prototype/css/styles.css
+++ b/prototype/css/styles.css
@@ -118,7 +118,6 @@
 /* =-=-=-= MAIN =-=-=-= */
 
 main{
-    padding: 30px;
     min-height: 90vh; 
     display: flex;
     flex-direction: column;
@@ -162,7 +161,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 100px;
+    height: 10vh;
     box-shadow: 1px 1px 2px 1px rgba(94, 93, 93, 0.8);
     padding: 0 10px;
 }
@@ -243,23 +242,19 @@ nav #title {
 
 #map {
     position: relative; 
-    height: 85vh;
-    max-width: 75%;
-    min-width: 75%;
+    height: 90vh;
+    width: 80%;
     float: right;
     background-color: lightgray;
-    border-radius: 15px;
     z-index: 1;
 }
 
 #busData {
-    padding: 10px 20px;
-    height: 85vh;
-    max-width: 25%;
-    min-width: 22.5%;
+    padding: 20px;
+    height: 90vh;
+    width: 20%;
     float: left;
     background-color: lightgray;
-    border-radius: 15px;
     overflow-y: scroll;
     overflow-x: hidden;
 }
