Use classes instead of IDs (as objects are not unique) and make destination text size smaller so it doesn't clip to new lines

--- a/prototype/css/styles.css
+++ b/prototype/css/styles.css
@@ -361,12 +361,12 @@ footer p {
     margin: 0;
 }
 
-.busTimeRecord #times {
+.busTimeRecord .times {
     text-align: right;
 }
 
-.busTimeRecord #destination {
-    font-size: 20px;
+.busTimeRecord .destination {
+    font-size: 18px;
 }
 
 /* Scroll bar */
