--- a/prototype/css/styles.css
+++ b/prototype/css/styles.css
@@ -7,114 +7,6 @@
     scrollbar-width: thin;
 }
 
-.poppins-thin {
-    font-family: "Poppins", sans-serif;
-    font-weight: 100;
-    font-style: normal;
-}
-
-.poppins-extralight {
-    font-family: "Poppins", sans-serif;
-    font-weight: 200;
-    font-style: normal;
-}
-
-.poppins-light {
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-}
-
-.poppins-regular {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
-.poppins-medium {
-    font-family: "Poppins", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-}
-
-.poppins-semibold {
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-}
-
-.poppins-bold {
-    font-family: "Poppins", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-}
-
-.poppins-extrabold {
-    font-family: "Poppins", sans-serif;
-    font-weight: 800;
-    font-style: normal;
-}
-
-.poppins-black {
-    font-family: "Poppins", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-}
-
-.poppins-thin-italic {
-    font-family: "Poppins", sans-serif;
-    font-weight: 100;
-    font-style: italic;
-}
-
-.poppins-extralight-italic {
-    font-family: "Poppins", sans-serif;
-    font-weight: 200;
-    font-style: italic;
-}
-
-.poppins-light-italic {
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: italic;
-}
-
-.poppins-regular-italic {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-}
-
-.poppins-medium-italic {
-    font-family: "Poppins", sans-serif;
-    font-weight: 500;
-    font-style: italic;
-}
-
-.poppins-semibold-italic {
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    font-style: italic;
-}
-
-.poppins-bold-italic {
-    font-family: "Poppins", sans-serif;
-    font-weight: 700;
-    font-style: italic;
-}
-
-.poppins-extrabold-italic {
-    font-family: "Poppins", sans-serif;
-    font-weight: 800;
-    font-style: italic;
-}
-
-.poppins-black-italic {
-    font-family: "Poppins", sans-serif;
-    font-weight: 900;
-    font-style: italic;
-}  
-
 /* =-=-=-= MAIN =-=-=-= */
 
 main{
@@ -128,36 +20,18 @@ html, body {
     height: 100%;
     margin: 0;
     margin: 0;
-    overflow-x: hidden; /* Hide horizontal overflow */
-    overflow-y: auto; /* Allow vertical overflow */
+    overflow-x: hidden;
+    overflow-y: auto; 
 }
 
 body{
     margin: 0;
 }
 
-/* =-=-=-= Easter Egg =-=-=-= */
-
-#easterEggContainer {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none; 
-    z-index: 999;
-}
-
-#easterEggContainer img {
-    position: absolute;
-    transition: transform 0.3s ease;
-}
-
 /* =-=-=-= NAV =-=-=-= */
 
-/* Ensure that nav stays in row format */
 nav {
-    display: flex !important;  /* Force flexbox layout */
+    display: flex ;  
     align-items: center;
     justify-content: space-between;
     width: 100%;
@@ -204,7 +78,7 @@ nav a {
 }
 
 nav li#active a {
-    color: rgb(160, 158, 158);;  /* Change the color of the anchor tag when the parent li is active */
+    color: rgb(160, 158, 158);
 }
 
 nav a:hover {
@@ -387,6 +261,23 @@ footer p {
 ::-webkit-scrollbar-thumb {
     background: #888;
     border-radius: 4px;
+}
+
+/* =-=-=-= Easter Egg =-=-=-= */
+
+#easterEggContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none; 
+    z-index: 999;
+}
+
+#easterEggContainer img {
+    position: absolute;
+    transition: transform 0.3s ease;
 }
 
 /* Responsive layout for phonez */
