--- a/prototype/css/styles.css
+++ b/prototype/css/styles.css
@@ -265,25 +265,53 @@ nav #title {
     height: 800px;
 }
 
-#LoginSection{
-    width: 60%;
-    height: 500px;
-    background-color: #94b6ff81;
+#login-section {
+    width: 40vw;
+    height: 35vh;
+    background-color: #fff;
     border-radius: 20px;
     margin: auto;
-    margin-top: 2%;
+    box-shadow: 0px 4px 4px 0px rgba(37, 36, 36, 0.8);
+    margin: auto;
+    padding-top: 3vh;
 }
 
-#LoginSection h1,form{
-    margin-top: 5%;
-    max-width: fit-content;
-    margin-inline:auto ;
+#login-container {
+    padding-top: 20vh;
 }
 
-#LoginSection input{
-    margin-top: 2%;
-    width: 500px;
-    height: 50px;
+#login-section h1 {
+    text-align: center;
+}
+
+#login-section form {
+    margin: auto;
+    width: 70%;
+}
+
+#login-section input {
+    padding-left: 10px;
+    width: 100%;
+    height: 5vh;
+    margin-top: 2vh;
+    border-radius: 5px;
+    border-width: 1px;
+}
+
+#login-button {
+    transition-duration: 0.4s;
+    width: 100%;
+    height: 5vh;
+    margin-top: 2vh;
+    border-radius: 5px;
+    border-width: 0px;
+    color: black;
+    background-color: rgb(216, 216, 216) ;
+}
+  
+#login-button:hover {
+    background-color: rgb(73, 73, 73);
+    color: white;
 }
 
 .map-button {
@@ -433,5 +461,9 @@ footer p {
         height: 0;
     }
 
+    #login-section {
+        width: 80vw;
+        height: 35vh;
+    }
 }
 
