--- a/prototype/css/styles.css
+++ b/prototype/css/styles.css
@@ -20,8 +20,8 @@ html, body {
     height: 100%;
     margin: 0;
     margin: 0;
-    overflow-x: hidden; /* Hide horizontal overflow */
-    overflow-y: auto; /* Allow vertical overflow */
+    overflow-x: hidden; 
+    overflow-y: auto; 
 }
 
 body{
@@ -47,9 +47,8 @@ body{
 
 /* =-=-=-= NAV =-=-=-= */
 
-/* Ensure that nav stays in row format */
 nav {
-    display: flex !important;  /* Force flexbox layout */
+    display: flex !important;  
     align-items: center;
     justify-content: space-between;
     width: 100%;
@@ -96,7 +95,7 @@ nav a {
 }
 
 nav li#active a {
-    color: rgb(160, 158, 158);;  /* Change the color of the anchor tag when the parent li is active */
+    color: rgb(160, 158, 158);;  
 }
 
 nav a:hover {
@@ -200,7 +199,7 @@ nav #title {
     color: black;
     background-color: rgb(216, 216, 216) ;
 }
-  
+
 #login-button:hover {
     background-color: rgb(73, 73, 73);
     color: white;
