Make navigation consistent across all pages

--- a/prototype/css/styles.css
+++ b/prototype/css/styles.css
@@ -45,6 +45,11 @@ body{
     transition: transform 0.3s ease;
 }
 
+#easterEggButton {
+    font-weight: 400;
+    font-size: 17.5px;
+}
+
 /* =-=-=-= NAV =-=-=-= */
 
 nav {
