--- a/prototype/css/styles.css
+++ b/prototype/css/styles.css
@@ -27,6 +27,31 @@ body{
     margin: 0;
 }
 
+.search-container {
+    margin: 10px;
+}
+
+input[type=text] {
+    padding: 6px;
+    margin-top: 8px;
+    font-size: 17px;
+    border: none;
+}
+
+.search-container button {
+    padding: 6px 10px;
+    margin-top: 8px;
+    margin-right: 16px;
+    background: #ddd;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;  
+}
+
+.search-container button:hover {
+    background: #ccc;
+}
+
 /* =-=-=-= EASTER EGG =-=-=-= */
 #easterEggContainer {
     position: absolute;
