--- a/final/views/pages/index.ejs
+++ b/final/views/pages/index.ejs
@@ -1,1 +1,50 @@
-<!-- views/pages/index.ejs -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <%- include("../partials/head") %>
+</head>
+
+<body>
+    <header>
+        <%- include("../partials/header") %>
+    </header>
+
+    <main>
+
+        <!-- Bus route map -->
+        <div id="map"></div>
+        
+        <aside>
+            <div class="search-container">
+                <form id="searchForm">
+                    <input type="text" placeholder="Route" name="search" id="routeSearch">
+                    <button type="submit"><i class="fa fa-search"></i></button>
+                </form>
+            </div>
+            
+    
+            <div id="bus-data">
+    
+                
+    
+                <!--
+                <div class="bus-time-record">
+                    <h2>X8 <span id="destination">to Stonehaven</span></h2>
+                    <p id="times">00:00 (Exp: 00:01)<br><span>CANCELLED</span></p>
+                </div>
+                -->
+            </div>
+        </aside>
+        
+        
+        <!-- Easter Egg -->
+        <div id="easterEggContainer"></div>
+    
+    </main>
+
+    <footer>
+        <%- include("../partials/footer") %>
+    </footer>
+
+</body>
+</html>
