--- a/final/views/partials/footer.ejs
+++ b/final/views/partials/footer.ejs
@@ -1,1 +1,7 @@
 <!-- views/partials/footer.ejs -->
+
+<footer>
+    <div class="footer-container">
+        <a id="footer-link" href="https://www.youtube.com/watch?v=xvFZjo5PgG0"><p>&copy; 2024 Bus Tracker. All rights reserved.</p></a>
+    </div>
+</footer>
