--- a/final/views/partials/header.ejs
+++ b/final/views/partials/header.ejs
@@ -1,1 +1,46 @@
 <!-- views/partials/header.ejs -->
+
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <div class="container-fluid p-0">
+            <a class="navbar-brand d-flex align-items-center ms-2" href="index.html">
+                <img src="images/logo.png" alt="Logo" class="me-2">
+                Bus Tracker
+            </a>
+    
+            <!-- Toggler -->
+            <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+    
+            <!-- Navbar content aligned to the right -->
+            <div class="collapse navbar-collapse rounded-4 rounded-top-0" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 p-4">  
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Map</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="timetable.html">Timetables</a>
+                    </li>
+                    <li onclick="alert('This feature is coming soon!')" class="nav-item">
+                        <a class="nav-link" href="#">Plan Trip</a>
+                    </li>
+    
+                    <!-- login dropdown -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fa-solid fa-user"></i> 
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">  
+                            <li><a class="dropdown-item" href="settings.html">Settings</a></li>
+                            <!--<li><a class="dropdown-item" href="favorites.html">Favorites</a></li>-->
+                            <li><button class="dropdown-item" id="easterEggButton">Buses</button></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="login.html">Login/Sign Out</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
