instialised login ejs file in the final folder

--- a/final/views/pages/login.ejs
+++ b/final/views/pages/login.ejs
@@ -1,1 +1,29 @@
 <!-- views/pages/login.ejs -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <%- include("../partials/head") %>
+</head>
+
+<body>
+    <header>
+        <%- include("../partials/header") %>
+    </header>
+    <main>
+        <div id="login-container">
+            <div id="login-section">
+                <h1>Login</h1>
+                <form action="Login">
+                    <input type="email" placeholder="Email"><br>
+                    <input type="password" placeholder="Password"><br>
+                    <a href="#"><button id="login-button" type="submit">Submit</button></a>
+                </form>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <%- include("../partials/footer") %>
+    </footer>
+
+</body>
+</html>
