--- a/final/views/partials/header.ejs
+++ b/final/views/partials/header.ejs
@@ -3,7 +3,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid p-0">
-            <a class="navbar-brand d-flex align-items-center ms-2" href="index.html">
+            <a class="navbar-brand d-flex align-items-center ms-2" href="/">
                 <img src="images/logo.png" alt="Logo" class="me-2">
                 Bus Tracker
             </a>
@@ -20,7 +20,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Map</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="timetable.html">Timetables</a>
+                        <a class="nav-link" href="/timetable">Timetables</a>
                     </li>
                     <li onclick="alert('This feature is coming soon!')" class="nav-item">
                         <a class="nav-link" href="#">Plan Trip</a>
@@ -32,11 +32,11 @@
                             <i class="fa-solid fa-user"></i> 
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">  
-                            <li><a class="dropdown-item" href="settings.html">Settings</a></li>
+                            <li><a class="dropdown-item" href="/settings">Settings</a></li>
                             <!--<li><a class="dropdown-item" href="favorites.html">Favorites</a></li>-->
                             <li><button class="dropdown-item" id="easterEggButton">Buses</button></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="login.html">Login/Sign Out</a></li>
+                            <li><a class="dropdown-item" href="/login">Login/Sign Out</a></li>
                         </ul>
                     </li>
                 </ul>
