changed route name for map navigation link

--- a/final/views/partials/header.ejs
+++ b/final/views/partials/header.ejs
@@ -17,7 +17,7 @@
             <div class="collapse navbar-collapse rounded-4 rounded-top-0" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 p-4">  
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Map</a>
+                        <a class="nav-link active" aria-current="page" href="/">Map</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/timetable">Timetables</a>
