--- a/final/views/partials/head.ejs
+++ b/final/views/partials/head.ejs
@@ -16,6 +16,7 @@
     <script src="/js/vendor/leaflet.js"></script>
     <script src="/js/vendor/polyline.js"></script>
     <script type="module" src="/js/map.js"></script>
+    <script type="module" src="/js/timetable.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <title>BusTracker</title>
