changed the url for the logo home button redirect

--- a/final/views/partials/header.ejs
+++ b/final/views/partials/header.ejs
@@ -3,7 +3,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid p-0">
-            <a class="navbar-brand d-flex align-items-center ms-2" href="index.html">
+            <a class="navbar-brand d-flex align-items-center ms-2" href="/">
                 <img src="images/logo.png" alt="Logo" class="me-2">
                 Bus Tracker
             </a>
