--- a/final/views/pages/index.ejs
+++ b/final/views/pages/index.ejs
@@ -2,49 +2,32 @@
 <html lang="en">
 <head>
     <%- include("../partials/head") %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
-
 <body>
     <header>
         <%- include("../partials/header") %>
     </header>
-
-    <main>
-
-        <!-- Bus route map -->
-        <div id="map"></div>
-        
-        <aside>
-            <div class="search-container">
-                <form id="searchForm">
-                    <input type="text" placeholder="Route" name="search" id="routeSearch">
-                    <button type="submit"><i class="fa fa-search"></i></button>
-                </form>
-            </div>
-            
-    
-            <div id="bus-data">
-    
-                
-    
-                <!--
-                <div class="bus-time-record">
-                    <h2>X8 <span id="destination">to Stonehaven</span></h2>
-                    <p id="times">00:00 (Exp: 00:01)<br><span>CANCELLED</span></p>
+    <main class="container-fluid">
+        <div class="row">
+            <!-- Map -->
+            <div id="map" class="col-md-9 col-12"></div>
+            <!-- Sidebar / Bus Data -->
+            <aside class="col-md-3 col-12 bg-light p-3">
+                <div class="search-container mb-3">
+                    <form id="searchForm" class="d-flex">
+                        <input type="text" class="form-control me-2" placeholder="Route" name="search" id="routeSearch">
+                        <button type="submit" class="btn btn-outline-secondary"><i class="fa fa-search"></i></button>
+                    </form>
                 </div>
-                -->
-            </div>
-        </aside>
-        
-        
-        <!-- Easter Egg -->
-        <div id="easterEggContainer"></div>
-    
+                <div id="bus-data" class="overflow-auto"></div>
+            </aside>
+        </div>
     </main>
-
-    <footer>
+    <footer class="mt-auto">
         <%- include("../partials/footer") %>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
