Test automatic git pull by changing a file

--- a/final/views/partials/header.ejs
+++ b/final/views/partials/header.ejs
@@ -22,7 +22,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/timetable">Timetables</a>
                     </li>
-                    <li onclick="alert('This feature is coming soon!')" class="nav-item">
+                    <li onclick="alert('This feature is coming soon! Edited')" class="nav-item">
                         <a class="nav-link" href="#">Plan Trip</a>
                     </li>
     
