Added the login page js file and changed login ejs so that it has a post method

--- a/final/views/pages/login.ejs
+++ b/final/views/pages/login.ejs
@@ -13,7 +13,7 @@
         <div id="login-container">
             <div id="login-section">
                 <h1>Login</h1>
-                <form action="Login">
+                <form action="/login" method="POST">
                     <input type="email" placeholder="Email"><br>
                     <input type="password" placeholder="Password"><br>
                     <a href="#"><button id="login-button" type="submit">Submit</button></a>
