--- a/final/views/pages/login.ejs
+++ b/final/views/pages/login.ejs
@@ -14,8 +14,8 @@
             <div id="login-section">
                 <h1>Login</h1>
                 <form action="/createAccount" method="POST">
-                    <input type="email" placeholder="Email"><br>
-                    <input type="password" placeholder="Password"><br>
+                    <input type="email" placeholder="Email" name="userEmail"><br>
+                    <input type="password" placeholder="Password" name="userPass"><br>
                     <a href="#"><button id="login-button" type="submit">Submit</button></a>
                 </form>
             </div>
