--- a/final/views/pages/login.ejs
+++ b/final/views/pages/login.ejs
@@ -13,7 +13,7 @@
         <div id="login-container">
             <div id="login-section">
                 <h1>Login</h1>
-                <form action="/createAccount" method="POST">
+                <form action="/login" method="POST">
                     <input type="email" placeholder="Email" name="userEmail" required><br>
                     <input type="password" placeholder="Password" name="userPass" required><br>
                     <a href="#"><button id="login-button" type="submit">Submit</button></a>
