when on mobile view on the index page the nav bar is hidden but the hamburger is shown. fixed the issue with thw nav bar dropdown not closing on the index page

--- a/final/views/pages/login.ejs
+++ b/final/views/pages/login.ejs
@@ -7,7 +7,11 @@
 
 <body>
     <header>
-        <%- include("../partials/header") %>
+        <% if (isMobile) { %>
+            <%- include('../partials/headerMobile') %>
+        <% } else { %>
+            <%- include('../partials/headerDesktop') %>
+        <% } %>
     </header>
     <main>
         <div id="login-container">
