--- a/final/views/partials/headerDesktop.ejs
+++ b/final/views/partials/headerDesktop.ejs
@@ -1,4 +1,4 @@
-<!-- views/partials/header.ejs -->
+<!-- views/partials/headerDesktop.ejs -->
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
