--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -193,14 +193,19 @@ footer {
     color: white;
 }
 
-.map-button {
+.map-button, .map-button-reset {
     background: #C9C6C2;
     border-radius: 5px;
     padding: 2px;
     cursor: pointer;
+    z-index: 500;
 }
 
-.map-button button {
+.leaflet-top, .leaflet-bottom {
+    z-index: 500 !important; 
+}
+
+.map-button button, .map-button-reset button {
     position: relative;
     width: 30px; 
     height: 30px; 
@@ -218,12 +223,6 @@ footer {
 
 .map-button button:hover {
     background-color: #F4F4F4;
-}
-
-#reset-button #home-button #location-button {
-    padding: 8px 16px; 
-    font-size: 14px;
-    z-index: 5;
 }
 
 .user-location-marker {
@@ -248,8 +247,6 @@ footer {
 }
 
 /* =-=-=-= FOOTER =-=-=-= */
-
-
 footer p {
     font-size: 0.8rem;
     margin: 0; 
@@ -345,8 +342,7 @@ button.btn-link.number:hover {
 
 
 /* =-=-=-= RESPONSIVE PHONES =-=-=-= */
-@media (max-width: 992px) {
-    
+@media (max-width: 992px) and (hover: none) and (pointer: coarse){
     body {
         overflow: hidden;
     }
@@ -381,6 +377,136 @@ button.btn-link.number:hover {
     #login-section {
         width: 80vw;
         height: 35vh;
+    }
+
+    /* Index Page CSS */
+    .index-page {
+        body {
+            overflow: hidden;
+            margin: 0;
+            padding: 0;
+        }
+        
+        main {
+            padding: 0;
+            margin: 0;
+        }
+        
+        aside {
+            width: 100%;
+        }
+        
+        #map {
+            height: 75vh;
+            margin-top: 0;
+            padding-top: 0;
+            position: relative;
+            top: 0;
+        }
+        
+        #bus-data {
+            max-height: 90vh;
+        }
+        
+        header {
+            background-color: transparent;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 1000;
+            box-shadow: none;
+            height: auto;
+        }
+
+        .navbar-toggler:focus {
+            outline: none;
+            box-shadow: none;
+        }
+        
+        .navbar-toggler {
+            position: relative;
+            z-index: 3000;
+        }
+
+        nav .logo {
+            height: 0;
+            visibility: hidden;
+        }
+        
+        .navbar {
+            background-color: transparent !important;
+            box-shadow: none !important;
+            padding: 0;
+        }
+        
+        .navbar .container-fluid {
+            justify-content: flex-end;
+        }
+        
+        .navbar-toggler {
+            background: #C9C6C2 !important;
+            border-radius: 5px !important;
+            padding: 2px;
+            cursor: pointer;
+            border: none;
+            position: absolute;
+            top: 10px;
+            right: 2px;
+            width: 36px;
+            height: 36px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            pointer-events: auto;
+            z-index: 9999; 
+        }
+        
+        .navbar-toggler-icon {
+            background-color: white; 
+            color: black; 
+            border: none;
+            border-radius: 3px;
+            padding: 16px; 
+            cursor: pointer;
+            font-size: 14px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%; 
+            height: 100%;
+        }
+        
+        .navbar-collapse {
+            background-color: white;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            z-index: 9998 !important;
+        }
+        
+        nav img {
+            width: 50px;
+            height: 50px;
+        }
+
+        .leaflet-top .map-button-reset {
+            margin-top: 55px !important; 
+        }
+
+        .leaflet-top {
+            padding-left: 12px;
+            padding-right: 12px;
+        }
+        
+        footer {
+            visibility: hidden;
+            display: none;
+            height: 0;
+        }
+        
+        #login-section {
+            width: 80vw;
+            height: 35vh;
+        }
     }
 }
 
