--- a/final/views/pages/index.ejs
+++ b/final/views/pages/index.ejs
@@ -3,9 +3,13 @@
 <head>
     <%- include("../partials/head") %>
 </head>
-<body>
+<body class="index-page">
     <header>
-        <%- include("../partials/header") %>
+        <% if (isMobile) { %>
+            <%- include('../partials/headerMobile') %>
+        <% } else { %>
+            <%- include('../partials/headerDesktop') %>
+        <% } %>
     </header>
     <main class="container-fluid">
         <div class="row">
@@ -26,6 +30,5 @@
     <footer class="mt-auto">
         <%- include("../partials/footer") %>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
