fixed the mobile header

--- a/final/views/pages/index.ejs
+++ b/final/views/pages/index.ejs
@@ -5,11 +5,7 @@
 </head>
 <body class="index-page">
     <header>
-        <% if (isMobile) { %>
-            <%- include('../partials/headerMobile') %>
-        <% } else { %>
-            <%- include('../partials/headerDesktop') %>
-        <% } %>
+        <%- include("../partials/header") %>
     </header>
     <main class="container-fluid">
         <div class="row">
