--- a/final/views/pages/login.ejs
+++ b/final/views/pages/login.ejs
@@ -7,11 +7,7 @@
 
 <body>
     <header>
-        <% if (isMobile) { %>
-            <%- include('../partials/headerMobile') %>
-        <% } else { %>
-            <%- include('../partials/headerDesktop') %>
-        <% } %>
+        <%- include("../partials/header") %>
     </header>
     <main>
         <div id="login-container">
