--- a/final/views/partials/header.ejs
+++ b/final/views/partials/header.ejs
@@ -1,9 +1,9 @@
-<!-- views/partials/headerDesktop.ejs -->
+<!-- views/partials/header.ejs -->
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid p-0">
-            <a class="navbar-brand d-flex align-items-center ms-2" href="/">
+            <a class="navbar-brand d-flex align-items-center ms-2 logo" href="/">
                 <img src="images/logo.png" alt="Logo" class="me-2">
                 Bus Tracker
             </a>
