--- a/final/views/pages/settings.ejs
+++ b/final/views/pages/settings.ejs
@@ -7,11 +7,7 @@
 
 <body>
     <header>
-        <% if (isMobile) { %>
-            <%- include('../partials/headerMobile') %>
-        <% } else { %>
-            <%- include('../partials/headerDesktop') %>
-        <% } %>
+        <%- include("../partials/header") %>
     </header>
     <main>
         <!-- https://www.bootdey.com/snippets/view/profile-notification-settings --> 
