removed the leaflet + & - zoom buttons and moved the homne button to the right

--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -221,7 +221,7 @@ footer {
     justify-content: center;
 }
 
-.map-button button:hover {
+.map-button button:hover, .map-button-reset button:hover {
     background-color: #F4F4F4;
 }
 
