Add resizable handle to bus-data panel on mobile devices

--- a/final/views/pages/index.ejs
+++ b/final/views/pages/index.ejs
@@ -22,10 +22,9 @@
                 <div id="bus-data" class="overflow-auto"></div>
             </aside>
         </div>
-
         <%- include("../partials/cookieAlert") %>
-
     </main>
     <script src="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.js"></script>
+    <script src="/js/grabber.js"></script>
 </body>
 </html>
