create timetable render page and server data

--- a/final/views/pages/timetable.ejs
+++ b/final/views/pages/timetable.ejs
@@ -11,21 +11,16 @@
     </header>
     <!-- Forms for selecting bus route -->
     <main class="p-4">
-        <label for="service">Select Bus company:</label>
-        <select class="form-select form-select-lg mb-3" id="service" onchange="setOperator()">
-            <option value="https://www.firstbus.co.uk/api/timetables/pdf">First bus</option>
-            <option value="https://www.stagecoachbus.com/timetables">StageCoach</option>
-        </select>
     
         <!-- div for selecting bus route for first-->
-        <div id="selection">
+        <label for="Service">Service Number:</label>
+        <input class="form-select form-control-lg" type="number" id="route" placeholder="Enter the service number" >
+            
 
-        </div>
+        <label for="route">Timetable Date:</label>
+        <input class="form-control form-control-lg" type="date" id="date" placeholder="Enter the date of timetable">
         
-        <!-- div for the first bus timetable pdf viewer -->
-        <div id="pdfContainer">
-
-        </div>
+        <button class="btn btn-primary btn-lg mt-4 mb-4" onclick="ScrapeTimetable()">Open Timetable</button>
     </main>
 
     <footer>
