undo change to name

--- a/final/views/pages/timetable.ejs
+++ b/final/views/pages/timetable.ejs
@@ -20,7 +20,7 @@
         <label for="route">Timetable Date:</label>
         <input class="form-control form-control-lg" type="date" id="date" placeholder="Enter the date of timetable">
         
-        <button class="btn btn-primary btn-lg mt-4 mb-4" onclick="scrapeTimetable()">Open Timetable</button>
+        <button class="btn btn-primary btn-lg mt-4 mb-4" onclick="ScrapeTimetable()">Open Timetable</button>
     </main>
 
     <footer>
