Added create page and made changes to settings and login page

--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -208,6 +208,11 @@ footer {
     background-color: rgb(216, 216, 216) ;
 }
 
+#login-section p{
+    padding-top: 5px;
+}
+
+
 #login-button:hover {
     background-color: rgb(73, 73, 73);
     color: white;
