--- a/final/views/pages/create.ejs
+++ b/final/views/pages/create.ejs
@@ -1,4 +1,4 @@
-<!-- views/pages/login.ejs -->
+<!-- views/pages/create.ejs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,12 +12,15 @@
     <main>
         <div id="login-container">
             <div id="login-section">
-                <h1>Login</h1>
-                <form action="/login" method="POST">
+                <h1>Create Account</h1>
+                <form action="/createUser" method="POST">
+                    
+
+
+
                     <input type="email" placeholder="Email" name="userEmail" required><br>
                     <input type="password" placeholder="Password" name="userPass" required><br>
-                    <a href="#"><button id="login-button" type="submit">Submit</button></a>
-                    <p>Dont Have An Account Create One <a href="/create">Here</a></p>
+                    <a href="#"><button id="login-button" type="submit">Create</button></a>
                 </form>
             </div>
         </div>
