fixed issue with the form

--- a/final/views/pages/create.ejs
+++ b/final/views/pages/create.ejs
@@ -14,13 +14,12 @@
             <div id="login-section">
                 <h1>Create Account</h1>
                 <form action="/createUser" method="POST">
-                    
+                    <input type="text" placeholder="title" name="title"><br>
+                    <input type="text" placeholder="title" name="first"><br>
 
-
-
-                    <input type="email" placeholder="Email" name="userEmail" required><br>
-                    <input type="password" placeholder="Password" name="userPass" required><br>
-                    <a href="#"><button id="login-button" type="submit">Create</button></a>
+                    <input type="email" placeholder="Email" name="email" required><br>
+                    <input type="password" placeholder="Password" name="password" required><br>
+                    <button id="login-button" type="submit">Create</button>
                 </form>
             </div>
         </div>
