Hopefull bug fixes that will work this time and not break else i will not be happy

--- a/final/views/pages/create.ejs
+++ b/final/views/pages/create.ejs
@@ -13,7 +13,7 @@
         <div id="login-container">
             <div id="login-section">
                 <h1>Create Account</h1>
-                <form action="/createUser" method="POST">
+                <form action="/create/createUser" method="POST">
                     <input type="text" placeholder="title" name="title"><br>
                     <input type="text" placeholder="title" name="first"><br>
 
