Title is broken bug fix hopefully

--- a/final/views/pages/create.ejs
+++ b/final/views/pages/create.ejs
@@ -14,8 +14,8 @@
             <div id="login-section">
                 <h1>Create Account</h1>
                 <form action="/create/createUser" method="POST">
-                    <input type="text" placeholder="title" name="title"><br>
-                    <input type="text" placeholder="title" name="first"><br>
+                    <input type="text" placeholder="Mr/ Mrs" name="title"><br>
+                    <input type="text" placeholder="FirstName" name="first"><br>
 
                     <input type="email" placeholder="Email" name="email" required><br>
                     <input type="password" placeholder="Password" name="password" required><br>
