fixed the nav bar link to settings and login

--- a/final/views/partials/header.ejs
+++ b/final/views/partials/header.ejs
@@ -34,7 +34,7 @@
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">  
                             <li><a class="dropdown-item" href="/settings">Settings</a></li>
                             <!--<li><a class="dropdown-item" href="favorites.html">Favorites</a></li>-->
-                            <li><button class="dropdown-item" id="easterEggButton">Buses</button></li>
+                            <!-- <li><button class="dropdown-item" id="easterEggButton">Buses</button></li> -->
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="/login">Login/Sign Out</a></li>
                         </ul>
