Automatically show/hide bus data panel on mobile (closes #59)

--- a/final/views/pages/index.ejs
+++ b/final/views/pages/index.ejs
@@ -25,6 +25,6 @@
         <%- include("../partials/cookieAlert") %>
     </main>
     <script src="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.js"></script>
-    <script src="/js/grabber.js"></script>
+    <script src="/js/grabber.js" type="module"></script>
 </body>
 </html>
