Added padding to make the css change look slightly beter

--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -131,7 +131,7 @@ nav #title {
     
     min-height: 35vh;
     max-height: fit-content;
-
+    padding-bottom: 1.5vh;
     background-color: #fff;
     border-radius: 20px;
     margin: auto;
