changed from body tag to main as i was being silly

--- a/final/views/pages/create.ejs
+++ b/final/views/pages/create.ejs
@@ -5,11 +5,11 @@
     <%- include("../partials/head") %>
 </head>
 
-<body class="login-register">
+<body>
     <header>
         <%- include("../partials/header") %>
     </header>
-    <main>
+    <main class="login-register">
         <div id="login-container">
             <div id="login-section">
                 <h1>Create Account</h1>
